change container to use example

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -2,4 +2,4 @@ FROM atlemagnussen/node-quic:ubuntu18-15.0.1
 WORKDIR /app
 COPY . .
 EXPOSE 3000
-CMD [ "node", "server-static.js" ]
+CMD [ "node", "server-example.js" ]
