added expose udp

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -2,4 +2,5 @@ FROM atlemagnussen/node-quic:ubuntu18-15.0.1
 WORKDIR /app
 COPY . .
 EXPOSE 3000
+EXPOSE 3000/udp
 CMD [ "node", "server-example.js" ]
